Stop counting steps

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -79,7 +79,7 @@
             <div data-role="content">
                 <ul data-role="listview" id="memoListView">
                     <div data-role="content">
-                        <h1>Ejercicio App</h1>
+                        <h1>Exercise App</h1>
                         <input type="button" id="startWatchAcceleration" value="Empezar a contar Pasos"/>
                         <input type="button" id="stopWatchAcceleration" value="Detener"/>
                         <div id="acceleration">
