--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -66,7 +66,7 @@
         <script src="jqueryMobile/jquery.validate.min.js"></script>  
         <script src="js/common.js"></script>         
                      
-        <title>Podométro</title>
+        <title>Podómetro</title>
     </head>
     <body>
         <div id="loading" data-role="page">
@@ -78,8 +78,12 @@
             </div>
             <div data-role="content">
                 <div class="userimg-container" style="width:100%">
-                    <a href="#userimg-popup" data-rel="popup" data-position-to="window" data-transition="pop">
-                        <img id="userimg" style="width:100%"></img>
+                    <a href="#userimg-popup" 
+                        style="width:100%;max-height=200px"
+                        data-rel="popup" 
+                        data-position-to="window" 
+                        data-transition="pop">
+                        <img id="userimg" style="width:100%;max-height=200px"></img>
                     </a>
                 </div>
 
